# app.js
@@ -10,6 +10,7 @@ var indexRouter = require('./routes/index');
 var usersRouter = require('./routes/users');
 var apiRouter = require('./routes/api');
 var apiUserRouter = require('./routes/api/user');
+var apiEncyclopediaRouter = require('./routes/api/encyclopedia');
 
 var app = express();
 
@@ -32,6 +33,7 @@ app.use('/', indexRouter);
 app.use('/users', usersRouter);
 app.use('/api', apiRouter);
 app.use('/api/user', apiUserRouter);
+app.use('/api/encyclopedia', apiEncyclopediaRouter);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
